@@ -6,6 +6,11 @@ Version 6.0.0-RC.11
 AllOverIt
   * Added support for ExcludeWhen() to ObjectMapper
 
+AllOverIt.Pagination
+  * Renamed the exposed query provided to the paginator as BaseQuery so it isn't confused with the resultant paginated
+    query provided by GetPageQuery(). This base query can be used to get the total page count without having to carry
+    it around seperately.
+
 
 04 Sep 2022
 Version 6.0.0-RC.10
